--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Server
+server.port=8080
+
+# Application
 spring.application.name=FreshExpress
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# jpa
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
